# vyatta-op-quagga

./: .frlog  .gitignore  COPYING  Makefile.am  README  configure.ac  vtysh2templates
debian/: README  README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  linda  lintian  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  vyatta-op-quagga-default.ex  vyatta-op-quagga.doc-base.EX  watch.ex
scripts/: vtyshow.pl
templates/clear/ip/: node.def
templates/clear/ipv6/: node.def
templates/debug/: node.def
templates/debug/.isis/: node.def
templates/debug/bgp/: node.def
templates/debug/isis/: node.def
templates/debug/ospf/: node.def
templates/debug/ospf6/: node.def
templates/debug/ospfv3/: node.def
templates/debug/rip/: node.def
templates/debug/ripng/: node.def
templates/debug/zebra/: node.def
templates/monitor/protocol/: node.def
templates/no/debug/: node.def
templates/show/.bgp/: node.def
templates/show/.clns/: node.def
templates/show/.isis/: node.def
templates/show/.ospf4/: node.def
templates/show/bgp/: node.def
templates/show/clns/: node.def
templates/show/debugging/: node.def
templates/show/ip/: node.def
templates/show/ipv6/: node.def
templates/show/isis/: node.def
templates/show/mpls-te/: node.def
templates/show/ospf4/: node.def
templates/show/rib/: node.def
templates/show/route-map/: node.def
templates/show/rpki/: node.def
templates/show/table/: node.def
templates/undebug/: node.def
(+1273 files in other folders)
